--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<p>I'm hosted with GitHub Pages.</p>
 		<p><a href="https://p1imo.github.io/simple-calculator.html">简单的计算器</a></p>
 		<p><a href="https://p1imo.github.io/gojuon.html">五十音</a></p>
+		<p><a href="https://towerofgalaxy.github.io/">星之塔（施工中）</a></p>
 		<p><a href="https://p1imo.github.io/test.md">Markdown Test</a></p>
 		<p><a href="https://p1imo.github.io/test.html">HTML Test</a></p>
 	</div>
